feat: show all reachable lineage nodes
